Connect to cassandra database

--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,6 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<testng.version>6.10</testng.version>
-		<lombok.version>1.16.8</lombok.version>
 		<commons.lang3.version>3.0</commons.lang3.version>
 	</properties>
 	
@@ -28,7 +27,26 @@
 	
 	<dependencyManagement>
 		<dependencies>
-
+			<dependency>
+			    <groupId>com.datastax.cassandra</groupId>
+			    <artifactId>cassandra-driver-core</artifactId>
+			    <version>3.2.0</version>
+			</dependency>
+			<dependency>
+			    <groupId>com.datastax.cassandra</groupId>
+			    <artifactId>cassandra-driver-mapping</artifactId>
+			    <version>3.2.0</version>
+			</dependency>
+			<dependency>
+				<groupId>hu.lamsoft.experiment</groupId>
+				<artifactId>cqrs-command-microservice-persistence</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>hu.lamsoft.experiment</groupId>
+				<artifactId>cqrs-command-microservice-service</artifactId>
+				<version>${project.version}</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 	
@@ -61,7 +79,6 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>${lombok.version}</version>
         </dependency>
         
         <dependency>
