--- a/command-microservice/pom.xml
+++ b/command-microservice/pom.xml
@@ -13,6 +13,8 @@
 
 	<modules>
 		<module>persistence</module>
+		<module>service</module>
+		<module>application</module>
 	</modules>
 	
 </project>
