Playing with kafka

--- a/pom.xml
+++ b/pom.xml
@@ -23,30 +23,53 @@
 
 	<modules>
 		<module>command-microservice</module>
+		<module>kafka-producer</module>
 	</modules>
 	
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
-			    <groupId>com.datastax.cassandra</groupId>
-			    <artifactId>cassandra-driver-core</artifactId>
-			    <version>3.2.0</version>
-			</dependency>
-			<dependency>
-			    <groupId>com.datastax.cassandra</groupId>
-			    <artifactId>cassandra-driver-mapping</artifactId>
-			    <version>3.2.0</version>
-			</dependency>
-			<dependency>
 				<groupId>hu.lamsoft.experiment</groupId>
 				<artifactId>cqrs-command-microservice-persistence</artifactId>
 				<version>${project.version}</version>
 			</dependency>
+			
 			<dependency>
 				<groupId>hu.lamsoft.experiment</groupId>
 				<artifactId>cqrs-command-microservice-service</artifactId>
 				<version>${project.version}</version>
 			</dependency>
+			
+			<dependency>
+				<groupId>hu.lamsoft.experiment</groupId>
+				<artifactId>cqrs-kafka-producer-integration</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			
+			<dependency>
+				<groupId>hu.lamsoft.experiment</groupId>
+				<artifactId>cqrs-kafka-producer-service</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			
+			<dependency>
+			    <groupId>com.datastax.cassandra</groupId>
+			    <artifactId>cassandra-driver-core</artifactId>
+			    <version>3.2.0</version>
+			</dependency>
+			
+			<dependency>
+			    <groupId>com.datastax.cassandra</groupId>
+			    <artifactId>cassandra-driver-mapping</artifactId>
+			    <version>3.2.0</version>
+			</dependency>
+			
+			<dependency>
+				<groupId>org.apache.kafka</groupId>
+				<artifactId>kafka-clients</artifactId>
+				<version>0.10.2.0</version>
+			</dependency>
+			
 		</dependencies>
 	</dependencyManagement>
 	
